# Gesture-Based-Manipulator-Control-in-ROS-with-TinyML

./: ManipulatorController.ino  README.md
kinova_control/: CMakeLists.txt  package.xml
kinova_control/config/: kinematics.yaml
kinova_control/launch/: kinova_control.launch.py
kinova_control/scripts/: client_kinova_control.py  gesture_controller.py
kinova_control/src/: service_kinova_control.cpp
kinova_control/srv/: KeyTrigger.srv
